# cs_paint

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: InstallMinGW.cmake
cmake/modules/: CMakeDetermineGLSLCompiler.cmake  CMakeGLSLCompiler.cmake.in  CMakeGLSLInformation.cmake  CMakeTestGLSLCompiler.cmake  CompileShaders.cmake
demo/: data.cpp  demo.cmake  demo.cpp  demo.h  init.cpp  prototype.cpp
demo/resources/: chalkboard.stl  frame.stl  generate-msdf-texture  shader.frag  shader.vert  table.stl  tabletop.stl  text.frag  text.vert
src/: cspaint.cmake  cspaint.h  cspaint_buffer.cpp  cspaint_buffer.h  cspaint_commandbuffer.cpp  cspaint_commandbuffer.h  cspaint_commandpool.cpp  cspaint_commandpool.h  cspaint_context.cpp  cspaint_context.h  cspaint_descriptor.cpp  cspaint_descriptor.h  cspaint_descriptorpool.cpp  cspaint_descriptorpool.h  cspaint_device.cpp  cspaint_device.h  cspaint_fwd.h  cspaint_image.cpp  cspaint_image.h  cspaint_io.cpp  cspaint_io.h  cspaint_memorypool.cpp  cspaint_memorypool.h  cspaint_pipeline.cpp  cspaint_pipeline.h  cspaint_queue.cpp  cspaint_queue.h  cspaint_renderpass.cpp  cspaint_renderpass.h  cspaint_shader.cpp  cspaint_shader.h  cspaint_surface.cpp  cspaint_surface.h  cspaint_swapchain.cpp  cspaint_swapchain.h  cspaint_util.h
